external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/dot_incomplete.exp
error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/dot_incomplete.move:13:24
   │
13 │         let _tmp1 = _s.;                // incomplete with `;` (next line should parse)
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/dot_incomplete.move:14:26
   │
14 │         let _tmp2 = _s.a.;  // incomplete with `;` (next line should parse)
   │                          ^
   │                          │
   │                          Unexpected ';'
   │                          Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/dot_incomplete.move:16:9
   │
16 │         let _tmp4 = _s.
   │         ^^^
   │         │
   │         Unexpected 'let'
   │         Expected an identifier or a decimal number

